fix/ fix the x axis overflow

--- a/01-Portafolio-web/src/index.css
+++ b/01-Portafolio-web/src/index.css
@@ -34,6 +34,7 @@
   body {
     background-color: var(--background);
     color: var(--foreground);
+    overflow-x: hidden;
   }
 
   .bg-background {
